<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_app_language"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textSize="@dimen/settingsPrimaryTextSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/settings_current_language"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="@dimen/settingsSecondaryTextSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/item_max_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_maxVideoLength"
                android:textSize="@dimen/settingsPrimaryTextSize"
                android:textAppearance="?attr/textAppearanceSubtitle1" />
            <TextView
                android:id="@+id/length_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="20"
                android:paddingBottom="16dp"
                android:textSize="@dimen/settingsSecondaryTextSize"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_reset"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textSize="@dimen/settingsPrimaryTextSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/settings_resetDescription"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="@dimen/settingsSecondaryTextSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/item_server_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_ip"
                android:textSize="@dimen/settingsPrimaryTextSize"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <!-- Здесь отображаем текущий IP (или подсказку, если не задан) -->
            <TextView
                android:id="@+id/ip_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_ip_not_set"
                android:paddingBottom="8dp"
                android:textSize="@dimen/settingsSecondaryTextSize"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
