<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_toast_fileNotChosen"
        android:textStyle="bold"
        android:textSize="@dimen/infoTextSize"
        android:layout_marginBottom="8dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:foregroundGravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:visibility="gone" />

        <VideoView
            android:id="@+id/preview_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/info_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/info_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_infoTv"
            android:textSize="@dimen/infoTextSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/upload_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Дата загрузки: —"
            android:visibility="gone" />

        <TextView
            android:id="@+id/file_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Длительность: —"
            android:visibility="gone" />

        <TextView
            android:id="@+id/handbags_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Сумок: —"
            android:textSize="@dimen/infoTextSize" />

        <TextView
            android:id="@+id/suitcases_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Чемоданов: —"
            android:textSize="@dimen/infoTextSize" />

        <TextView
            android:id="@+id/backpacks_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Рюкзаков: —"
            android:textSize="@dimen/infoTextSize" />
    </LinearLayout>

    <Button
        android:id="@+id/get_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/infoTextSize"
        android:text="@string/info_fragment_getInformation" />

</LinearLayout>
