<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/controls_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Ячейка 1: выбрать фото -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnChooseImage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:tint="?attr/scanButtonColor"
                android:src="@drawable/take_photo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/buttonTextSize"
                android:text="@string/scan_fragment_takePhoto"
                android:textColor="?attr/scanButtonTextColor"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>

        <!-- Ячейка 2: выбрать видео -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnChooseVideo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:tint="?attr/scanButtonColor"
                android:src="@drawable/take_video" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/buttonTextSize"
                android:text="@string/scan_fragment_recordVideo"
                android:textColor="?attr/scanButtonTextColor"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>

        <!-- Ячейка 3: загрузить -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnUpload"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:tint="?attr/scanButtonColor"
                android:src="@drawable/upload_file" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/buttonTextSize"
                android:text="@string/scan_fragment_uploadFile"
                android:textColor="?attr/scanButtonTextColor"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
